getting ready for publish

--- a/seedling/package.json
+++ b/seedling/package.json
@@ -1,25 +1,36 @@
 {
-    "name": "seedling",
-    "displayName": "Seedling",
-    "description": "Syntax Highlighter for Seedling Template Language",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.48.0"
-    },
-    "categories": [
-        "Programming Languages"
+  "name": "seedling",
+  "displayName": "Seedling",
+  "description": "Syntax Highlighter for Seedling Template Language",
+  "version": "0.0.1",
+  "publisher": "Seedling",
+  "engines": {
+    "vscode": "^1.48.0"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "contributes": {
+    "languages": [
+      {
+        "id": "seedling",
+        "aliases": [
+          "Seedling",
+          "seedling"
+        ],
+        "extensions": [
+          ".seed",
+          ".html"
+        ],
+        "configuration": "./language-configuration.json"
+      }
     ],
-    "contributes": {
-        "languages": [{
-            "id": "seedling",
-            "aliases": ["Seedling", "seedling"],
-            "extensions": [".seed",".html"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "seedling",
-            "scopeName": "source.seedling",
-            "path": "./syntaxes/seedling.tmLanguage.json"
-        }]
-    }
+    "grammars": [
+      {
+        "language": "seedling",
+        "scopeName": "source.seedling",
+        "path": "./syntaxes/seedling.tmLanguage.json"
+      }
+    ]
+  }
 }
